--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "@types/react-redux": "^7.1.9",
         "@types/react-router-dom": "^5.1.5",
         "@types/styled-components": "^5.1.3",
+        "axios": "^0.20.0",
         "material-ui": "^0.20.2",
         "prettier-airbnb-config": "^1.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.1",
         "react-scripts": "3.4.3",
+        "redux": "^4.0.5",
         "styled-components": "^5.2.0",
         "typescript": "~3.7.2"
     },
