--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
     "material-ui": "^0.20.2",
@@ -23,6 +24,8 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
@@ -52,21 +55,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "ts-loader": "8.0.0",
     "@storybook/addon-actions": "^6.0.26",
     "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-info": "5.3.19",
     "@storybook/addon-links": "^6.0.26",
+    "@storybook/addons": "^5.3.19",
     "@storybook/node-logger": "^6.0.26",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.26",
-    "@storybook/addon-info": "5.3.19",
-    "@storybook/addons": "^5.3.19",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "babel-loader": "^8.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "react-is": "^16.13.1"
+    "react-is": "^16.13.1",
+    "ts-loader": "8.0.0"
   }
 }
