--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ django = "==2.2.9"
 autopep8 = "*"
 djangorestframework = "*"
 pyjwt = "*"
+django-cors-headers = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
