--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/material-ui": "^0.21.8",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.14.10",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
@@ -17,6 +18,8 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
+    "http-proxy-middleware": "^1.0.6",
+    "js-cookie": "^2.2.1",
     "material-ui": "^0.20.2",
     "prettier-airbnb-config": "^1.0.0",
     "react": "^16.13.1",
