--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
+    "formik": "^2.2.5",
     "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
     "material-ui": "^0.20.2",
@@ -25,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
