--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.6",
+    "@types/mapbox-gl": "^2.1.0",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^14.14.10",
     "@types/react": "^16.9.0",
@@ -25,6 +26,7 @@
     "prettier-airbnb-config": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-map-gl": "^6.1.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
