--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "3.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -73,7 +73,6 @@
     "@storybook/react": "^6.0.26",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
-    "babel-loader": "^8.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
