--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.6",
     "@types/mapbox-gl": "^2.1.0",
@@ -20,6 +21,8 @@
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.3",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^6.0.0",
     "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
     "material-ui": "^0.20.2",
