--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^14.14.10",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-map-gl": "^5.2.9",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
@@ -29,7 +30,7 @@
     "prettier-airbnb-config": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-map-gl": "^6.1.7",
+    "react-map-gl": "5.2.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
